--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Sakai - PrimeNG</title>
+        <title>Studio Booking - HredoySen</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1.o" />
-        <link rel="preconnect" href="https://primefaces.org" />
+        <link rel="preconnect" href="https://hredoysen.netlify.app/" />
         <link rel="icon" type="image/x-icon" href="https://primefaces.org/cdn/primeng/images/favicon.png" />
         <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet" />
     </head>
